# starlark-mcp

./: .gitignore  LICENSE  README.md  TODO.md  Taskfile.yml  builtins.go  builtins.md  builtins_test.go  description_test.go  eval_cases_test.go  eval_llm_test.go  eval_test.go  execute_starlark_description.md  go.mod  go.sum  lefthook.yml  main.go  main_test.go  mise.toml  pyproject.toml  resources.go  run.sh  tools.go
.github/workflows/: ci.yml
cmd/eval/: main.go
evals/: cases.go  cases.yaml  dedent.go  dedent_test.go  display.go  errors.py  eval.py  filter.go  filter_test.go  heredoc_test.go  judges.py  judges_test.py  llm.go  main.go
internal/llm/: anthropic.go  anthropic_test.go  fireworks.go  fireworks_test.go  llm.go  llm_test.go  ollama.go  ollama_test.go  openai.go  openai_test.go
internal/textutil/: dedent.go  dedent_test.go
server/: builtins.go  builtins_test.go  description.md  description_test.go  execute_starlark_description.md  prelude.star  resources.go  server.go  server_test.go  tools.go
